--- a/src/pages/tracks2/tracks2.html
+++ b/src/pages/tracks2/tracks2.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the SongsPage page.
+  Generated template for the Tracks2Page page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,16 +7,15 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Tracks</ion-title>
+    <ion-title>tracks</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  
     <ion-list>
-        <ion-item *ngFor = "let cancion of songsB">
+        <ion-item *ngFor = "let cancion of cancionesM">
           {{cancion}}
         </ion-item>
       </ion-list>
