--- a/src/pages/tracks3/tracks3.html
+++ b/src/pages/tracks3/tracks3.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the SongsPage page.
+  Generated template for the Tracks3Page page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -14,11 +14,10 @@
 
 
 <ion-content padding>
-  
+
     <ion-list>
-        <ion-item *ngFor = "let cancion of songsB">
+        <ion-item *ngFor = "let cancion of cancionesparis">
           {{cancion}}
         </ion-item>
       </ion-list>
-
 </ion-content>
